testsuite/bsc.driver/gensign/DupIdVsPackage.bsv
import Vector::*;

export Vector::*;
export replicateM;

